external-crates/move/crates/move-compiler/tests/move_check/naming/unknown_assertion_annotation.exp
error[E13001]: feature is not supported in specified edition
  ┌─ tests/move_check/naming/unknown_assertion_annotation.move:2:7
  │
2 │     #[error] 
  │       ^^^^^ Clever `assert!`, `abort`, and `#[error]` are under development and should not be used right now.
  │
  = You can update the edition in the 'Move.toml', or via command line flag if invoking the compiler directly.

