external-crates/move/crates/move-compiler/tests/move_check/naming/unknown_assertion_annotation.move
module 0x42::m {
    #[error] 
    const F: u64 = 0;
}
